manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nong-kai-service
  namespace: nonprod
spec:
  selector:
    app: nong-kai-api-nonprod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
