manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nong-kai-ingress
  namespace: nonprod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: express.local 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nong-kai-service
                port:
                  number: 80
